// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: help returns help with /github help command 1`] = `
Object {
  "attachments": Array [
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for a repository:
\`/github subscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for a repository:
\`/github unsubscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for all repositories in an organization:
\`/github subscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for an organization:
\`/github unsubscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to additional features and adjust the configuration of your subscription (<https://github.com/integrations/slack#configuration|Learn more>):
\`/github subscribe owner/repository reviews,comments\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from one or more subscription features:
\`/github unsubscribe owner/repository commits\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create required-label. Issues, Comments, PRs without that label will be ignored:
\`/github subscribe owner/repository +label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create ignored-label. Issues, Comments, PRs with that label will be ignored:
\`/github subscribe owner/repository -label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Remove required-label:
\`/github unsubscribe owner/repository +label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Remove ignored-label:
\`/github unsubscribe owner/repository -label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions in a channel:
\`/github subscribe list\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions with subscription features:
\`/github subscribe list features\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Close an issue:
\`/github close [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Reopen an Issue:
\`/github reopen [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Adjust your settings in this workspace:
\`/github settings\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Show this help message:
\`/github help\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create a new issue:
\`/github open owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Trigger a deployment:
\`/github deploy owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List deployments of a repo:
\`/github deploy owner/repository list\`",
    },
    Object {
      "color": "",
      "footer": "<https://github.com/integrations/slack#readme|Learn More> — <https://github.com/contact?form%5Bsubject%5D=GitHub%2BSlack%20integration|Contact Support>",
      "footer_icon": "https://github.githubassets.com/favicon.ico",
      "text": "",
    },
  ],
  "response_type": "ephemeral",
  "text": ":wave: Need some help with \`/github\`?",
}
`;

exports[`Integration: help returns help with /github help command 2`] = `
Array [
  "pending-command#13345224609.738474920.8088930838d88f008e0",
]
`;

exports[`Integration: help returns help with /github help command 3`] = `
Array [
  Array [
    "pending-command#13345224609.738474920.8088930838d88f008e0",
    Object {
      "channel_id": "C2147483705",
      "channel_name": "test",
      "command": "/github",
      "enterprise_id": "E0001",
      "enterprise_name": "Globular%20Construct%20Inc",
      "response_url": "https://hooks.slack.com/commands/1234/5678",
      "team_domain": "example",
      "team_id": "T0001",
      "text": "help",
      "token": "secret",
      "trigger_id": "13345224609.738474920.8088930838d88f008e0",
      "user_id": "U2147483697",
      "user_name": "Steve",
    },
  ],
]
`;

exports[`Integration: help returns help with no arguments 1`] = `
Object {
  "attachments": Array [
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for a repository:
\`/github subscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for a repository:
\`/github unsubscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for all repositories in an organization:
\`/github subscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for an organization:
\`/github unsubscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to additional features and adjust the configuration of your subscription (<https://github.com/integrations/slack#configuration|Learn more>):
\`/github subscribe owner/repository reviews,comments\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from one or more subscription features:
\`/github unsubscribe owner/repository commits\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create required-label. Issues, Comments, PRs without that label will be ignored:
\`/github subscribe owner/repository +label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create ignored-label. Issues, Comments, PRs with that label will be ignored:
\`/github subscribe owner/repository -label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Remove required-label:
\`/github unsubscribe owner/repository +label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Remove ignored-label:
\`/github unsubscribe owner/repository -label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions in a channel:
\`/github subscribe list\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions with subscription features:
\`/github subscribe list features\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Close an issue:
\`/github close [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Reopen an Issue:
\`/github reopen [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Adjust your settings in this workspace:
\`/github settings\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Show this help message:
\`/github help\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create a new issue:
\`/github open owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Trigger a deployment:
\`/github deploy owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List deployments of a repo:
\`/github deploy owner/repository list\`",
    },
    Object {
      "color": "",
      "footer": "<https://github.com/integrations/slack#readme|Learn More> — <https://github.com/contact?form%5Bsubject%5D=GitHub%2BSlack%20integration|Contact Support>",
      "footer_icon": "https://github.githubassets.com/favicon.ico",
      "text": "",
    },
  ],
  "response_type": "ephemeral",
  "text": ":wave: Need some help with \`/github\`?",
}
`;

exports[`Integration: help returns help with no arguments 2`] = `
Array [
  "pending-command#13345224609.738474920.8088930838d88f008e0",
]
`;

exports[`Integration: help returns help with no arguments 3`] = `
Array [
  Array [
    "pending-command#13345224609.738474920.8088930838d88f008e0",
    Object {
      "channel_id": "C2147483705",
      "channel_name": "test",
      "command": "/github",
      "enterprise_id": "E0001",
      "enterprise_name": "Globular%20Construct%20Inc",
      "response_url": "https://hooks.slack.com/commands/1234/5678",
      "team_domain": "example",
      "team_id": "T0001",
      "text": "",
      "token": "secret",
      "trigger_id": "13345224609.738474920.8088930838d88f008e0",
      "user_id": "U2147483697",
      "user_name": "Steve",
    },
  ],
]
`;

exports[`Integration: help returns help with unknown command 1`] = `
Object {
  "attachments": Array [
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for a repository:
\`/github subscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for a repository:
\`/github unsubscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for all repositories in an organization:
\`/github subscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for an organization:
\`/github unsubscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to additional features and adjust the configuration of your subscription (<https://github.com/integrations/slack#configuration|Learn more>):
\`/github subscribe owner/repository reviews,comments\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from one or more subscription features:
\`/github unsubscribe owner/repository commits\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create required-label. Issues, Comments, PRs without that label will be ignored:
\`/github subscribe owner/repository +label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create ignored-label. Issues, Comments, PRs with that label will be ignored:
\`/github subscribe owner/repository -label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Remove required-label:
\`/github unsubscribe owner/repository +label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Remove ignored-label:
\`/github unsubscribe owner/repository -label:my-label\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions in a channel:
\`/github subscribe list\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions with subscription features:
\`/github subscribe list features\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Close an issue:
\`/github close [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Reopen an Issue:
\`/github reopen [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Adjust your settings in this workspace:
\`/github settings\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Show this help message:
\`/github help\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create a new issue:
\`/github open owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Trigger a deployment:
\`/github deploy owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List deployments of a repo:
\`/github deploy owner/repository list\`",
    },
    Object {
      "color": "",
      "footer": "<https://github.com/integrations/slack#readme|Learn More> — <https://github.com/contact?form%5Bsubject%5D=GitHub%2BSlack%20integration|Contact Support>",
      "footer_icon": "https://github.githubassets.com/favicon.ico",
      "text": "",
    },
  ],
  "response_type": "ephemeral",
  "text": ":wave: Need some help with \`/github\`?",
}
`;

exports[`Integration: help returns help with unknown command 2`] = `
Array [
  "pending-command#13345224609.738474920.8088930838d88f008e0",
]
`;

exports[`Integration: help returns help with unknown command 3`] = `
Array [
  Array [
    "pending-command#13345224609.738474920.8088930838d88f008e0",
    Object {
      "channel_id": "C2147483705",
      "channel_name": "test",
      "command": "/github",
      "enterprise_id": "E0001",
      "enterprise_name": "Globular%20Construct%20Inc",
      "response_url": "https://hooks.slack.com/commands/1234/5678",
      "team_domain": "example",
      "team_id": "T0001",
      "text": "lolwut?",
      "token": "secret",
      "trigger_id": "13345224609.738474920.8088930838d88f008e0",
      "user_id": "U2147483697",
      "user_name": "Steve",
    },
  ],
]
`;
